objects/Account.object
<CustomObject>
    <fields>
        <fullName>bz_partner_industry_2__c</fullName>
        <description>BZ: Indutsry the partner uses for this account.</description>
        <inlineHelpText>Insert the industry the partner specified for this account.</inlineHelpText>
        <label>Partner Industry_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_industry_3__c</fullName>
        <description>BZ: Industry the partner uses for this account.</description>
        <inlineHelpText>Insert the industry the partner specified for this account.</inlineHelpText>
        <label>Partner Industry_3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_services_partner_1__c</fullName>
        <description>BZ:The partner which is engaged with this account should be chosen here.</description>
        <inlineHelpText>The partner which is engaged with this account should be chosen here.</inlineHelpText>
        <label>Services Partner_1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>L&amp;T</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mindtree</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAIC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siemens Business Services</fullName>
                </value>
                <value>
                    <fullName>Tata Consultancy Services</fullName>
                </value>
                <value>
                    <fullName>Tech Mahindra</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_services_partner_2__c</fullName>
        <description>BZ: Another partner engaged with this account should be chosen here.</description>
        <inlineHelpText>Another partner engaged with this account should be chosen here.</inlineHelpText>
        <label>Services Partner_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>L&amp;T</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mindtree</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAIC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siemens Business Services</fullName>
                </value>
                <value>
                    <fullName>Tata Consultancy Services</fullName>
                </value>
                <value>
                    <fullName>Tech Mahindra</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_services_partner_3__c</fullName>
        <description>BZ: Another partner which is engaged with this account should be chosen here.</description>
        <inlineHelpText>Another partner which is engaged with this account should be chosen here.</inlineHelpText>
        <label>Services Partner_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>L&amp;T</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mindtree</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAIC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siemens Business Services</fullName>
                </value>
                <value>
                    <fullName>Tata Consultancy Services</fullName>
                </value>
                <value>
                    <fullName>Tech Mahindra</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_duns__c</fullName>
        <description>For data management - Identify Account in DnB database</description>
        <label>DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_it_budget__c</fullName>
        <description>For data management - users shall know how much IT budget the account has</description>
        <label>IT Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_it_employees__c</fullName>
        <description>For data management - users shall know how many employees the account has</description>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dr_it_managers__c</fullName>
        <description>For data management</description>
        <label>IT Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_rainking_uniqueid__c</fullName>
        <inlineHelpText>Displays the RainKing ID of the object.</inlineHelpText>
        <label>RainKing UniqueID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_website_domain__c</fullName>
        <description>For data management - the Website domain (e.g.: tricentis.com). Is used for determining targeted accounts.</description>
        <inlineHelpText>Please enter the Website domain (e.g.: tricentis.com). Is used for determining targeted accounts.</inlineHelpText>
        <label>Website Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__EngagedPeople__c</fullName>
        <description>Number of engaged people</description>
        <label>Engaged People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast3Months__c</fullName>
        <description>Engagement minutes in the last 3 months</description>
        <label>Engagement Minutes (3 mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast7Days__c</fullName>
        <description>Engagement minutes in the last 7 days</description>
        <label>Engagement Minutes (7 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__FirstEngagementDate__c</fullName>
        <description>First engagement date</description>
        <label>First Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engagio__MQADate__c</fullName>
        <description>MQA date</description>
        <label>MQA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engagio__Status__c</fullName>
        <description>Status</description>
        <label>Engagio Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__WebVisitsLast3Months__c</fullName>
        <description>Web visits in the last 3 months</description>
        <label>Web Traffic (3 mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geo__c</fullName>
        <description>For reporting on location</description>
        <inlineHelpText>Used for grouping in reports. 3 Geos available: EMEA, US, APAC</inlineHelpText>
        <label>Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#E27001</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#78C953</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>AMS</fullName>
                    <color>#3366FF</color>
                    <label>AMS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>Unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>D&amp;B ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Accounts_with_CSM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CSM_Owner__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>PARENT_NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Targeted__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSM_Owner__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Accounts with a CSM</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>geo__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Tier_1_2_3_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Targeted__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 1,Tier 2,Tier 3</value>
        </filters>
        <label>My Tier 1,2 &amp; 3 Accounts</label>
        <sharedTo>
            <roleAndSubordinates>DSR_AMS_Head</roleAndSubordinates>
            <roleAndSubordinates>DSR_APAC_Head</roleAndSubordinates>
            <roleAndSubordinates>DSR_EMEA_Head</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New This Week -Tricentis</label>
    </listViews>
    <listViews>
        <fullName>X1_NA_Accounts</fullName>
        <columns>geo__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>1. NA Accounts</label>
        <sharedTo>
            <roleAndSubordinates>DSR_AMS_Head</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Tosca</fullName>
        <active>true</active>
        <label>Tosca</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Address_Required_Rule</fullName>
        <active>true</active>
        <description>This validation rule is required to make the billing address a required field. For now, it just requires country to be the mandatory field. we can expand it for the full billing address as well if necessary.</description>
        <errorConditionFormula>AND(
BillingCountry = NULL,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Tricentis Sales Operations&quot;)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Billing Country is required. If available, please enter the complete billing address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disable_Change_Owner_for_Sales_profile</fullName>
        <active>true</active>
        <description>Disabling Change Owner functionality for &quot;Tricentis Sales Profile&quot;.</description>
        <errorConditionFormula>AND(ISCHANGED( OwnerId ),  $Profile.Name =&quot;Tricentis Sales Profile&quot;)</errorConditionFormula>
        <errorMessage>If you feel that this account is wrongly assigned to you - please contact salesops@tricentis.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_and_Partner_Type_Validation</fullName>
        <active>true</active>
        <description>Choose a Partner Type when the Type is Partner</description>
        <errorConditionFormula>AND ( 
ISPICKVAL (Type ,&quot;Partner&quot;), 
ISBLANK( TEXT( Partner_Type__c )) 
)</errorConditionFormula>
        <errorDisplayField>Partner_Type__c</errorDisplayField>
        <errorMessage>Please select a Partner Type</errorMessage>
    </validationRules>
</CustomObject>